K1J-161: Added more events